- Even further tweaks in header css to avoid wrapped header on most screens
git-svn-id: file:///home/patrick.allaert/svn-git/ezp-repo/ezpublish/trunk@24784 a01eee8c-daba-0310-acae-fa49f3023285

--- a/design/admin2/stylesheets/theme/rounded.css
+++ b/design/admin2/stylesheets/theme/rounded.css
@@ -409,7 +409,7 @@ input.button-disabled
 
 /* CSS Media Query's to adjust layout based on screen width */
 
-@media all and (min-width: 1240px)
+@media all and (min-width: 1250px)
 {
 	#header-logo a, #header-logo span
 	{
@@ -417,7 +417,7 @@ input.button-disabled
 	}
 }
 
-@media all and (max-width: 1070px)
+@media all and (max-width: 1080px)
 {
     #header-logo a, #header-logo span
     {
